influxdb3-plugin-cli/tests/snapshots/new_smoke__new_index_json.snap
---
source: influxdb3-plugin-cli/tests/new_smoke.rs
assertion_line: 113
expression: payload
---
{
  "result": {
    "files_written": [
      "index.json"
    ],
    "kind": "index",
    "target_dir": "<TMPDIR>/reg",
    "template": "index"
  },
  "status": "ok"
}
