influxdb3-plugin-cli/tests/snapshots/new_smoke__new_process_scheduled_call_json.snap
---
source: influxdb3-plugin-cli/tests/new_smoke.rs
expression: payload
---
{
  "result": {
    "files_written": [
      "manifest.toml",
      "downsampler.py",
      "README.md"
    ],
    "kind": "plugin",
    "name": "downsampler",
    "target_dir": "<TMPDIR>/downsampler",
    "template": "process_scheduled_call"
  },
  "status": "ok"
}
