influxdb3-plugin-cli/tests/snapshots/new_smoke__new_registry_json.snap
---
source: influxdb3-plugin-cli/tests/new_smoke.rs
expression: payload
---
{
  "result": {
    "files_written": [
      "index.json"
    ],
    "kind": "registry",
    "target_dir": "<TMPDIR>/reg",
    "template": "registry"
  },
  "status": "ok"
}
